# first_nc

./: .env.dev  .env.example  .env.localenv  .env.prod  .gitignore  AGENTS.md  README.en.md  README.md  config.yaml  config.yml  index.html  package-lock.json  package.json  vite.config.ts  推荐文.md
.github/workflows/: desktop-build.yml
docker/: build-linux-in-docker.ps1
docs/: backend-config.md  development.md  help.md  packaging.md  product.md  technical.md
public/: startup-splash.html
scripts/: desktop-workflow.test.mjs  generate_brand_assets.py  package-linux-docker.sh  package-manifest.test.mjs  package-platform.mjs  package-platform.test.mjs  sync-version.mjs  sync-version.test.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.local.conf.json
src-tauri/linux/: FNCViewer.desktop  first-nc.desktop  first-nc.xml
src-tauri/src/: lib.rs  main.rs
src/components/: NcEditor.tsx  Viewer3D.tsx
src/lib/: appConfig.test.ts  appConfig.ts  appRuntimeCompat.test.ts  appShellData.ts  appViewUtils.ts  editorLifecycle.test.ts  editorOptions.test.ts  editorOptions.ts  ncPath.test.ts  ncPath.ts  shortcuts.ts  startupBundle.test.ts  startupLinuxCompat.test.ts  startupPlatform.test.ts  startupPlatform.ts  startupRuntimeCompat.test.ts  startupSplashBootReady.test.ts  storageKeys.test.ts  storageKeys.ts  topMenu.test.ts  topMenu.ts  updateClient.test.ts  updateClient.ts  updatePresentation.test.ts  updatePresentation.ts  viewerFocusSegment.test.ts  viewerFocusSegment.ts  viewerInteractionState.test.ts  viewerInteractionState.ts  (+11 more)
(+3 files in other folders)
