[package]
name = "first-nc"
version = "1.2.4"
description = "First NC Cross-Platform"
authors = ["First NC Team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "first_nc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["macos-private-api"] }
tauri-plugin-log = "2"
encoding_rs = "0.8"
tauri-plugin-dialog = "=2.6.0"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "stream"] }
futures-util = "0.3.32"
url = "2.5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "NSString", "NSProcessInfo"] }
